@@ -158,7 +158,7 @@ Raw input file is UTF-16-encoded, and is not valid ASCII.
     <system_message level="4" line="1" source="test data" type="SEVERE">
         <paragraph>
             Problems with "raw" directive path:
-            IOError: [Errno 2] No such file or directory: 'non-existent.file'.
+            InputError: [Errno 2] No such file or directory: 'non-existent.file'.
         <literal_block xml:space="preserve">
             .. raw:: html
                :file: non-existent.file
